--- a/src/layout/components/Navbar/style/index.module.less
+++ b/src/layout/components/Navbar/style/index.module.less
@@ -1,35 +1,40 @@
 .navbar {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid var(--color-border);
-  box-sizing: border-box;
-  background-color: var(--color-bg-2);
-  height: 100%;
-}
-
-.left {
-  display: flex;
   align-items: center;
-  padding-left: 20px;
-}
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-bg-2);
+  border-bottom: 1px solid var(--color-border);
 
-.right {
-  display: flex;
-  list-style: none;
-  padding-right: 20px;
-
-  li {
-    padding: 0 10px;
+  &-hd {
     display: flex;
     align-items: center;
+    padding-left: 20px;
   }
 
-  a {
-    text-decoration: none;
-    color: var(--color-text-1);
+  &-bd {
+    flex: 1;
   }
-}
 
-.username {
-  cursor: pointer;
+  &-ft {
+    display: flex;
+    padding-right: 20px;
+
+    li {
+      display: flex;
+      align-items: center;
+      padding: 0 10px;
+    }
+
+    a {
+      text-decoration: none;
+      color: var(--color-text-1);
+    }
+
+    .username {
+      cursor: pointer;
+    }
+  }
 }
